<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kotdroid.sociallogins.MainActivity">

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/flConatinerMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
    <Button
        android:id="@+id/btnInsta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instagram_login" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook_login" />

    <Button
        android:id="@+id/btnTwitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twitter_login" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_plus_login" />

    <Button
        android:id="@+id/btnLinkedin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linkedin_login" />

</LinearLayout>
